--- a/IDSIA_Bio_Texts_Thesis_pdf.html
+++ b/IDSIA_Bio_Texts_Thesis_pdf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-    	<title>Full Report - A Study on Sentiment, Length, and Readability in Movie Reviews</title>
+    	<title>Full Thesis Report - Evaluating Psychometric Features and Contextual Embeddings for Mental Disorder Classification</title>
     	<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     	<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,10 +39,8 @@
         </style>
     </head>
 	<body>
-        <h1><br>Full Report: A Study on Sentiment, Length, and Readability in Movie Reviews</h1>
+        <h1><br>Full Thesis Report: Evaluating Psychometric Features and Contextual Embeddings for Mental Disorder Classification</h1>
         <p>Preview the report below or download it.</p>
-        <iframe src="assets\pdf\TAD24 - Decoding Review Impact_ A Study on Sentiment, Length, and Readability in Movie Reviews - Suryam Gupta.pdf" width="100%" height="600px"></iframe>
-        <!--<a href="assets\pdf\TAD24 - Decoding Review Impact_ A Study on Sentiment, Length, and Readability in Movie Reviews - Suryam Gupta.pdf" class="button" download>Download Report</a>-->
+        <iframe src="assets\pdf\Suryam_thesis_full_final.pdf" width="100%" height="600px"></iframe>
 	</body>
 </html>
-
