--- a/IDSIA_Bio_Texts_Thesis_report.html
+++ b/IDSIA_Bio_Texts_Thesis_report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-    	<title>Full Thesis Report - Evaluating Psychometric Features and Contextual Embeddings for Mental Disorder Classification</title>
+    	<title>Evaluating Psychometric Features and Contextual Embeddings for Mental Disorder Classification</title>
     	<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     	<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,7 +39,7 @@
         </style>
     </head>
 	<body>
-        <h1><br>Full Thesis Report: Evaluating Psychometric Features and Contextual Embeddings for Mental Disorder Classification</h1>
+        <h1><br>Evaluating Psychometric Features and Contextual Embeddings for Mental Disorder Classification</h1>
         <p>Preview the report below or download it.</p>
         <iframe src="assets\pdf\Suryam_thesis_full_final.pdf" width="100%" height="600px"></iframe>
 	</body>
